tables with same width

--- a/update_scores.html
+++ b/update_scores.html
@@ -28,12 +28,6 @@
         th {
             background-color: #333333;
         }
-        select {
-            width: 200px;
-            background-color: #6b6a6a;
-            color: #fff;
-            border: 1px solid #444444;
-        }
         .comparison-container {
             display: flex;
             justify-content: space-between;
@@ -111,16 +105,6 @@
                 .catch(error => console.error('Error loading CSV:', error));
         }
 
-        function populateDropdowns(participants) {
-            const participantSelect = document.getElementById('participantSelect');
-            participants.forEach(participant => {
-                const option = document.createElement('option');
-                option.value = participant.file;
-                option.text = participant.name;
-                participantSelect.add(option);
-            });
-        }
-
         function displayTable(containerId, rows) {
             const boldText = [
                 'Group Stage Predictions', 'Group A', 'Group B', 'Group C', 'Group D', 'Group E', 'Group F', 
@@ -143,86 +127,13 @@
             document.getElementById(containerId).innerHTML = tableHTML;
         }
 
-        function loadParticipantPredictions() {
-            const participantSelect = document.getElementById('participantSelect');
-            const selectedFile = participantSelect.value;
-            if (selectedFile) {
-                loadCSV(selectedFile, rows => displayTable('participantPredictions', rows));
-            } else {
-                document.getElementById('participantPredictions').innerHTML = '';
-            }
-        }
-
-        function calculateScores(actualResults, participants) {
-            const scores = [];
-            const promises = participants.map(participant => {
-                return new Promise((resolve) => {
-                    loadCSV(participant.file, (rows) => {
-                        actualResults.forEach((actualResult) => {
-                            const [date, team1, team1Score, team2, team2Score] = actualResult;
-                            if (team1Score !== undefined && team2Score !== undefined) {
-                                const row = [date, team1, team2, team1Score, team2Score];
-                                let score = 0;
-                                rows.forEach((predRow) => {
-                                    if (predRow.includes(team1) && predRow.includes(team2)) {
-                                        const team1Index = predRow.indexOf(team1);
-                                        const team2Index = predRow.indexOf(team2);
-                                        const predictedScore1 = parseInt(predRow[team1Index + 1]);
-                                        const predictedScore2 = parseInt(predRow[team2Index + 1]);
-                                        const actualScore1 = parseInt(team1Score);
-                                        const actualScore2 = parseInt(team2Score);
-
-                                        if (predictedScore1 === actualScore1 && predictedScore2 === actualScore2) {
-                                            score = 10;
-                                        } else if ((actualScore1 - actualScore2 === predictedScore1 - predictedScore2) && (actualScore1 > actualScore2 && predictedScore1 > predictedScore2 || actualScore1 < actualScore2 && predictedScore1 < predictedScore2)) {
-                                            score = 8;
-                                        } else if (actualScore1 === actualScore2 && predictedScore1 === predictedScore2) {
-                                            score = 5;
-                                        } else if ((actualScore1 > actualScore2 && predictedScore1 > predictedScore2) || (actualScore1 < actualScore2 && predictedScore1 < predictedScore2)) {
-                                            score = 5;
-                                        }
-                                    }
-                                });
-                                row.push(score);
-                                scores.push(row);
-                            }
-                        });
-                        resolve();
-                    });
-                });
-            });
-
-            return Promise.all(promises).then(() => scores);
-        }
-
-        function createScoresCSV(scores, participants) {
-            let csvContent = "data:text/csv;charset=utf-8,Date,Team1,Team2,Actual Score1,Actual Score2";
-            participants.forEach(participant => {
-                csvContent += `,${participant.name}`;
-            });
-            csvContent += "\n";
-
-            scores.forEach(row => {
-                csvContent += row.join(",") + "\n";
-            });
-
-            const encodedUri = encodeURI(csvContent);
-            const link = document.createElement("a");
-            link.setAttribute("href", encodedUri);
-            link.setAttribute("download", "scores.csv");
-            document.body.appendChild(link);
-            link.click();
-            document.body.removeChild(link);
-        }
-
         function generateScoresCSV() {
             loadCSV('./results_csv/Actual_Results.csv', actualResults => {
                 fetch('./jsons/participants.json')
                     .then(response => response.json())
                     .then(data => {
-                        calculateScores(actualResults, data.participants).then(scores => {
-                            createScoresCSV(scores, data.participants);
-                        });
+                        const scores = calculateScores(actualResults, data.participants);
+                        createScoresCSV(scores, data.participants);
                     })
                     .catch(error => console.error('Error loading participants list:', error));
             });
@@ -236,7 +147,13 @@
                 fetch('./jsons/participants.json')
                     .then(response => response.json())
                     .then(data => {
-                        populateDropdowns(data.participants);
+                        const participantSelect = document.getElementById('participantSelect');
+                        data.participants.forEach(participant => {
+                            const option = document.createElement('option');
+                            option.value = participant.file;
+                            option.text = participant.name;
+                            participantSelect.add(option);
+                        });
                     })
                     .catch(error => console.error('Error loading participants list:', error));
             });
