tables with same width

--- a/update_scores.html
+++ b/update_scores.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Participant Results vs. Euro2024 Results</title>
+    <title>Update Scores CSV</title>
     <style>
         body {
             font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
@@ -64,37 +64,10 @@
         <img src="./logos/logo.png" alt="Euro 2024 Logo" style="width:200px;">
     </div>
     <div class="generate-button">
-        <button onclick="generateScoresCSV()">Generate Scores CSV</button>
+        <button onclick="generateScoresCSV()">Update Scores CSV</button>
     </div>
 
     <script>
-        const flags = {
-            'Germany': 'https://flagcdn.com/w20/de.png',
-            'Scotland': 'https://flagcdn.com/w20/gb-sct.png',
-            'Hungary': 'https://flagcdn.com/w20/hu.png',
-            'Switzerland': 'https://flagcdn.com/w20/ch.png',
-            'Spain': 'https://flagcdn.com/w20/es.png',
-            'Croatia': 'https://flagcdn.com/w20/hr.png',
-            'Italy': 'https://flagcdn.com/w20/it.png',
-            'Albania': 'https://flagcdn.com/w20/al.png',
-            'Serbia': 'https://flagcdn.com/w20/rs.png',
-            'England': 'https://flagcdn.com/w20/gb-eng.png',
-            'Slovenia': 'https://flagcdn.com/w20/si.png',
-            'Denmark': 'https://flagcdn.com/w20/dk.png',
-            'Poland': 'https://flagcdn.com/w20/pl.png',
-            'Netherlands': 'https://flagcdn.com/w20/nl.png',
-            'Austria': 'https://flagcdn.com/w20/at.png',
-            'France': 'https://flagcdn.com/w20/fr.png',
-            'Romania': 'https://flagcdn.com/w20/ro.png',
-            'Ukraine': 'https://flagcdn.com/w20/ua.png',
-            'Belgium': 'https://flagcdn.com/w20/be.png',
-            'Slovakia': 'https://flagcdn.com/w20/sk.png',
-            'Turkey': 'https://flagcdn.com/w20/tr.png',
-            'Georgia': 'https://flagcdn.com/w20/ge.png',
-            'Portugal': 'https://flagcdn.com/w20/pt.png',
-            'Czechia': 'https://flagcdn.com/w20/cz.png'
-        };
-
         function loadCSV(file, callback) {
             fetch(file)
                 .then(response => response.text())
@@ -103,28 +76,6 @@
                     callback(rows);
                 })
                 .catch(error => console.error('Error loading CSV:', error));
-        }
-
-        function displayTable(containerId, rows) {
-            const boldText = [
-                'Group Stage Predictions', 'Group A', 'Group B', 'Group C', 'Group D', 'Group E', 'Group F', 
-                'Knockout Stage Predictions', 'Round of 16', 'Quarterfinals', 'Semifinals', 'Final', 
-                'Top Goalscorer', 'Best Goalkeeper', 'Player of Tournament'
-            ];
-
-            let tableHTML = '<table>';
-            rows.forEach(row => {
-                tableHTML += '<tr>';
-                row.forEach(cell => {
-                    const cellContent = cell.trim();
-                    const flagImg = flags[cellContent] ? `<img src="${flags[cellContent]}" class="flag"> ` : '';
-                    const cellClass = boldText.includes(cellContent) ? 'bold-text' : '';
-                    tableHTML += `<td class="${cellClass}">${flagImg}${cellContent}</td>`;
-                });
-                tableHTML += '</tr>';
-            });
-            tableHTML += '</table>';
-            document.getElementById(containerId).innerHTML = tableHTML;
         }
 
         function generateScoresCSV() {
@@ -138,26 +89,6 @@
                     .catch(error => console.error('Error loading participants list:', error));
             });
         }
-
-        // Load actual results and participant data on page load
-        window.onload = function() {
-            loadCSV('./results_csv/Actual_Results.csv', actualResults => {
-                displayTable('actualResults', actualResults);
-
-                fetch('./jsons/participants.json')
-                    .then(response => response.json())
-                    .then(data => {
-                        const participantSelect = document.getElementById('participantSelect');
-                        data.participants.forEach(participant => {
-                            const option = document.createElement('option');
-                            option.value = participant.file;
-                            option.text = participant.name;
-                            participantSelect.add(option);
-                        });
-                    })
-                    .catch(error => console.error('Error loading participants list:', error));
-            });
-        };
     </script>
 </body>
 </html>
