--- a/update_scores.html
+++ b/update_scores.html
@@ -89,6 +89,33 @@
                     .catch(error => console.error('Error loading participants list:', error));
             });
         }
+
+        function calculateScores(actualResults, participants) {
+            // Implement your logic to calculate scores based on actualResults and participants data
+            const scores = participants.map(participant => {
+                // Example calculation (you should replace it with your actual logic)
+                const score = actualResults.reduce((acc, result) => acc + (participant.predictions.includes(result) ? 1 : 0), 0);
+                return { name: participant.name, score: score };
+            });
+            return scores;
+        }
+
+        function createScoresCSV(scores, participants) {
+            let csvContent = "data:text/csv;charset=utf-8,";
+            csvContent += "Name,Score\n"; // Add header
+
+            scores.forEach(score => {
+                csvContent += `${score.name},${score.score}\n`;
+            });
+
+            const encodedUri = encodeURI(csvContent);
+            const link = document.createElement("a");
+            link.setAttribute("href", encodedUri);
+            link.setAttribute("download", "scores.csv");
+            document.body.appendChild(link); // Required for Firefox
+
+            link.click(); // This will download the CSV file
+        }
     </script>
 </body>
 </html>
